# LoL-Crawler

./: .cursorrules  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.dev  Dockerfile.service  Justfile  MEMORY.md  README.md  README.zh-CN.md  REJECTED.md  TODO.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  questions-etl-extensibility.md  questions-opgg.md  requirements-dev.txt  riot.txt  testing.md
lol-pipeline-common/: .dockerignore  README.md  pyproject.toml
lol-pipeline-common/contracts/: README.md
lol-pipeline-common/contracts/schemas/: dlq_envelope.json  envelope.json
lol-pipeline-common/src/lol_pipeline/: __init__.py  _helpers.py  _opgg_etl.py  _rate_limiter_data.py  _service_data.py  _streams_data.py  config.py  constants.py  headers.py  helpers.py  i18n.py  log.py  models.py  opgg_client.py  opgg_fast_stats.py  priority.py  rate_limiter.py  rate_limiter_client.py  raw_store.py  redis_client.py  resolve.py  riot_api.py  service.py  streams.py
lol-pipeline-common/tests/: conftest.py
lol-pipeline-common/tests/contract/: conftest.py  test_provider.py
lol-pipeline-common/tests/fixtures/: account.json  account_unicode.json  match_aram.json  match_large.json  match_normal.json  match_remake.json  opgg_match.json  opgg_summoner.json
lol-pipeline-common/tests/unit/: test_config.py  test_defer_message.py  test_helpers.py  test_helpers_fuzz.py  test_i18n.py  test_imp_007_raw_store_path_traversal.py  test_imp_008_config_repr.py  test_imp_015_config_optional_riot_key.py  test_imp_017_replay_stream_validation.py  test_imp_025_dlq_missing_fields.py  test_imp_026_corrupt_message_schema.py  test_imp_027_atomic_disk_write.py  test_imp_028_wait_for_token_timeout.py  test_imp_049_throttle_no_block.py  test_imp_061_retry_tracker_atomic.py  test_imp_062_raw_store_redis_only.py  test_imp_070_orphan_cleanup.py  test_imp_071_raw_store_redis_only.py  test_imp_072_blob_store_mkdir.py  test_imp_073_no_double_serialize.py  test_imp_096_headers.py  test_imp_103_check_rate_limit_count.py  test_log.py  test_match_id_schema.py  test_models.py  test_models_fuzz.py  test_opgg_client.py  test_opgg_fast_stats.py  test_priority.py  test_rate_limiter.py  test_rate_limiter_client.py  test_raw_store.py  test_raw_store_fuzz.py  test_redis_client.py  test_resolve.py  test_riot_api.py  test_riot_api_fuzz.py  test_service.py  test_sources_coordinator.py  test_sources_foundation.py  (+2 more)
lol-pipeline-ui/: Dockerfile  README.md  pyproject.toml
lol-pipeline-ui/src/lol_ui/: __init__.py  __main__.py  _helpers.py  _render_helpers.py  build_display.py  champions_helpers.py  conftest.py  constants.py  css.py  damage_bars.py  ddragon.py  dlq_helpers.py  health.py  kill_timeline.py  language.py  log_helpers.py  main.py  match_badges.py  match_detail.py  match_history.py  player_helpers.py  playstyle.py  profile_tabs.py  rank.py  recently_played.py  rendering.py  rune_display.py  sparkline.py  spell_display.py  stats_helpers.py  streams_helpers.py  strings.py  summoner_icon.py  tabs.py  team_analysis.py  test__helpers.py  test_build_display.py  test_champions_helpers.py  test_damage_bars.py  test_ddragon.py  (+23 more)
lol-pipeline-ui/tests/regression/: analyze_ui.py  test_stale_cache.py
lol-pipeline-ui/tests/unit/: conftest.py  test_dlq_clear_hint.py  test_load_more.py  test_main.py  test_opgg_prefetch_bg.py  test_player_refresh.py  test_players_pagination.py  test_read_only.py  test_stats_helpers.py  test_stats_poll.py  test_streams_helpers.py  test_system.py  test_ui_fuzz.py
(+409 files in other folders)
